# $Id: $

  ####  ##  ##   ##   ##  ##  ####  ######  #####  
 ##  ## ##  ##  ####  ### ## ##  ## ##     ###     
 ##     ###### ##  ## ###### ##     ####    ###    
 ##     ##  ## ###### ## ### ## ### ##       ###   
 ##  ## ##  ## ##  ## ##  ## ##  ## ##        ###  
  ####  ##  ## ##  ## ##  ##  ####  ###### #####   

2011/05/19	sendmail 8.14.5
2011/04/27	maildrop 2.5.3
2011/03/30	maildrop 2.5.2Z
2010/11/23	Add procmail-conflict-types-for-getline.patch
2010/10/27	maildrop 2.5.1 and dovecot 1.2.15 .
2010/03/08	Add more example configuration files.
2010/02/08	Add more example configuration files.
2010/02/07	Fix ruleset 98/ParseLocal bug.
2010/02/06	Use git repository.
2009/01/01	cf/feature -> cf/mailer .
2008/07/11	Rename: virtualmailbox.m4 -> virtmail.m4
2008/04/29	Register into CVS repository.
2007/12/29	Test version, virtualmailbox.m4 only.
