@@ -5,7 +5,7 @@
  # BASENAME should point to where the whole lot will be installed
  # change BASENAME to your home directory if need be
 -BASENAME	= /usr
-+BASENAME	= /usr/local/mda
++BASENAME	= /usr/local/virtmail
  # For display in the man pages
  VISIBLE_BASENAME= $(BASENAME)
  
@@ -43,12 +43,12 @@
  	system mailbox.	 This also must be an absolute path */
  
 -#define ETCRC	"/etc/procmailrc"	/* optional global procmailrc startup
-+#define ETCRC	"/usr/local/mda/etc/procmailrc"	/* optional global procmailrc startup
++#define ETCRC	"/usr/local/virtmail/etc/procmailrc"	/* optional global procmailrc startup
  					   file (will only be read if procmail
  	is started with no rcfile on the command line). */
  
 -#define ETCRCS	"/etc/procmailrcs/"	/* optional trusted path prefix for
-+#define ETCRCS	"/usr/local/mda/etc/procmailrcs/"	/* optional trusted path prefix for
++#define ETCRCS	"/usr/local/virtmail/etc/procmailrcs/"	/* optional trusted path prefix for
  					   rcfiles which will be executed with
  	the uid of the owner of the rcfile (this only happens if procmail is
  	called with the -m option, without variable assignments on the command
