@@ -7,6 +7,7 @@
  ##  ## ##  ## ##  ## ##  ## ##  ## ##        ###  
   ####  ##  ## ##  ## ##  ##  ####  ###### #####   
 
+2011/06/03	Directory name changed: mda -> virtmail
 2011/05/19	sendmail 8.14.5
 2011/04/27	maildrop 2.5.3
 2011/03/30	maildrop 2.5.2Z
